# build-your-own-kafka

./: Cargo.toml  README.md  asd  ű
kafka-macros/: Cargo.toml
kafka-macros/src/: lib.rs
src/: broker.rs  lib.rs  main.rs
src/codec/: codec.rs  decode.rs  lib.rs  macros.rs  mod.rs
src/handlers/: lib.rs  mod.rs  request_handler.rs
src/message/: api_keys.rs  body.rs  codec.rs  decode.rs  encode.rs  headers.rs  mod.rs  request.rs  response.rs
src/primitives/: api_keys.rs  bool.rs  compact_array.rs  compact_string.rs  mod.rs  nullable_string.rs  tag.rs  uvarint.rs
src/request/: body.rs  header.rs  mod.rs  request.rs
src/request/body/: api_versions_body.rs  body.rs  describe_topic_partitions_body.rs  lib.rs  mod.rs
src/response/: api_version.rs  body.rs  headers.rs  mod.rs  response.rs
src/response/body/: api_versions.rs  describe_topic_partitions.rs  lib.rs  mod.rs
src/types/: api_version.rs  mod.rs  tag.rs  topic.rs
