[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Balits Peter"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = {version="1.0.68", features = ["backtrace"]}
bytes = "1.3.0"                                 
futures = "0.3.31"
thiserror = "1.0.38"                           
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "codecrafters-kafka"
path = "src/bin/server.rs"
