[package]
name = "kafka"
version = "0.1.0"
authors = ["Balits Peter"]
edition = "2021"
rust-version = "1.80"

[dependencies]
kafka-macros = { path = "kafka-macros" }
anyhow = {version="1.0.68", features = ["backtrace"]}
bytes = "1.3.0"                                 
futures = "0.3.31"
thiserror = "1.0.38"                           
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
name = "kafka"
path = "src/lib.rs"

[[bin]]
name = "codecrafters-kafka"
path = "src/bin/server.rs"
